<resources>
    <string name="app_name">MusicLibrary</string>
    <string name="songs">Song title</string>
    <string name="artists">Artist</string>
    <string name="genre">Genre</string>
    <string name="playlist">Playlist</string>
    <string name="now_playing">Now playing</string>
    <string name="song_title">Song title</string>
    <string name="artist_name">Artist name</string>
    <string name="add">Add</string>
    <string name="add_to_playlist">Add song to playlist</string>
    <string name="play_pause">Play/Pause</string>
    <string name="search_by">Search by</string>
    <string name="search_by_artist">Search by Artist</string>
    <string name="search_by_title">Search by Title</string>
    <string name="search_by_genre">Search by Genre</string>
</resources>
