<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.musiclibrary.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/songs_selector"
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:layout_weight="33"
            android:padding="@dimen/small"
            android:text="@string/songs"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/artists_selector"
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:layout_weight="33"
            android:padding="@dimen/small"
            android:text="@string/artists"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/genre_selector"
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:layout_weight="33"
            android:padding="@dimen/small"
            android:text="@string/genre"
            android:textAlignment="center" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            tools:text="@string/now_playing" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="@dimen/main_text"
            tools:text="@string/artist_name" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            tools:text="@string/song_title" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/playlist" />

    <ListView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/normal">

    </ListView>

</LinearLayout>
